<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="create_term">Create Term</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="term_name">Term Name</string>
    <string name="view_terms">View Terms</string>
    <string name="add_term">Add Term</string>
    <string name="term_list">Term List</string>
    <string name="number_of_courses">Number of Courses:</string>
    <string name="view_all_courses">View Courses</string>
    <string name="delete_term">Delete Term</string>
    <string name="create_course">Create Course</string>
    <string name="course_name">Course Name</string>
    <string name="add_course">Add Course</string>
    <string name="instructor_name">Instructor Name:</string>
    <string name="instructor_phone">Instructor Phone:</string>
    <string name="instructor_email">Instructor Email:</string>
    <string name="status">Status:</string>
    <string name="view_notes">View Notes</string>
    <string name="assessments">Assessments</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_instructor">Edit Instructor</string>
    <string name="_555_555_5555">555–555–5555</string>
    <string name="instructor_email_edu">instructor@email.edu</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email</string>
    <string name="instructor_information">Add an instructor to the list below\nor select instructor from the list</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="course_status">Course Status:</string>
    <string name="save">Save</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_take">Plan to Take</string>
    <string name="select_course_status">Select Course Status</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="assessment">Assessment</string>
    <string name="create_assessment">Create Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="performance">Performance</string>
    <string name="objective">Objective</string>
    <string name="assessment_type">Assessment Type:</string>
    <string name="edit">Edit</string>
    <string name="note_name">Note Name</string>
    <string name="create_note">Create Note</string>
    <string name="add_note">Add Note</string>
    <string name="enter_notes_here">Enter Notes Here…</string>
    <string name="channel_name">myChannel</string>
    <string name="channel_description">myChannelDescription</string>
    <string name="home">Home</string>
    <string name="course_list">Course List</string>
    <string name="assessment_list">Assessment List</string>
    <string name="note_list">Note List</string>
    <string name="instructor_detail">Instructor Detail</string>
    <string name="set_alert">Set Alert</string>
</resources>