<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.AssessmentDetailViewController">

        <TextView
            android:id="@+id/textViewAssessmentDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assessment_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewAssessmentDetailStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/start_date"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/textViewAssessmentDetailEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAssessmentDetailName" />

        <TextView
            android:id="@+id/textViewAssessmentDetailEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="32dp"
            android:text="@string/end_date"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textViewAssessmentDetailStartDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAssessmentDetailStartDate"
            app:layout_constraintTop_toTopOf="@+id/textViewAssessmentDetailStartDate" />

        <TextView
            android:id="@+id/textViewAssessmentDetailType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/assessment_type"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textViewAssessmentDetailEndDate"
            app:layout_constraintStart_toStartOf="@+id/textViewAssessmentDetailStartDate"
            app:layout_constraintTop_toBottomOf="@+id/textViewAssessmentDetailStartDate" />

        <Button
            android:id="@+id/buttonEditAssessment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="onEditAssessment"
            android:text="@string/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAssessmentDetailType" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/assessmentDetailRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEditAssessment"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>